# biosciences-memory

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  debug.txt  docker-compose.yml  pyproject.toml
.claude/commands/: graphiti-docker-stats.md  graphiti-health.md  graphiti-verify.md
.claude/skills/graphiti-namespace/: SKILL.md
.claude/skills/graphiti-namespace/references/: anti-patterns.md  validation.md
config/: config.yaml
docker/: Dockerfile.local-mcp
scripts/: seed_priming_namespace.py
src/biosciences_memory/: cli.py  server.py
src/biosciences_memory/config/: schema.py
src/biosciences_memory/models/: entity_types.py
src/biosciences_memory/services/: factories.py  queue_service.py
tests/: conftest.py
tests/integration/: test_mcp_tools.py
tests/unit/: test_config.py  test_entity_types.py  test_factories.py  test_formatting.py  test_queue_service.py
